--- a/css/main.css
+++ b/css/main.css
@@ -885,4 +885,29 @@ hr{
     margin-left: 100px;
     margin-top: 30px;
   }
+  .box1{
+    background-color: rgba(0, 0, 0, 0);
+    height: 650px;
+    width: 100vw;
+    margin-left: 0px;
+  }
+  .video-line{
+    flex-flow: column wrap;
+    margin-left: 50px;
+
+  }
+  .video-line .video:first-child{
+    margin-bottom: 20px;
+  }
+  body{
+    height: 4016px;
+  }
+  h1{
+    margin-left: 50px;
+  }
+  .btn-main{
+    width: 270px;
+    margin-left: 50px;
+  }
+
 }
