--- a/pages/3/styles.css
+++ b/pages/3/styles.css
@@ -11,45 +11,53 @@
   font-family: Regular;
   src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
 }
-/*!
-     * chiefSlider (https://itchief.ru/lessons/php/feedback-form-for-website)
-     * Copyright 2018 Alexander Maltsev
-     * Licensed under MIT (https://github.com/itchief/how-to/blob/master/LICENSE)
-     */
+    body{
+      background: #FFE500;
+      overflow-x: hidden;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-x: hidden;
 
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      color: #fff;
-      height: 3000px;
+      height: 1830px;
     }
 
     .slider {
       position: relative;
+      width: 85vw;
+      height: 796px;
       overflow: hidden;
+      z-index: 3;
+      width: 85vw;
+      background: #FFF735;
+      border-radius: 10px;
+
     }
 
     .slider__wrapper {
       display: flex;
+      margin-left: 200px;
+      margin-top: 85px;
       transition: transform 0.6s ease;
+
+
     }
 
     .slider__item {
       flex: 0 0 100%;
-      max-width: 100%;
-    }
+      width: 953px;
+      height: 626px;
 
-    @media (min-width: 980px) {
-      .slider__item {
-        flex: 0 0 50%;
-        max-width: 50%;
-      }
+
+
     }
 
     .slider__control {
-      position: absolute;
-      top: 50%;
-      display: flex;
+      position: relative;
+      z-index: 4;
+      top: 0%;
+      display: none;
       align-items: center;
       justify-content: center;
       width: 40px;
@@ -57,8 +65,14 @@
       text-align: center;
       opacity: 0.5;
       height: 50px;
+      border: 4px solid #000000;
+      border-radius: 13px;
       transform: translateY(-50%);
-      background: rgba(0, 0, 0, .5);
+      background: rgba(0, 0, 0, .9);
+    }
+
+    .slider__control_show {
+      display: flex;
     }
 
     .slider__control:hover,
@@ -70,11 +84,15 @@
     }
 
     .slider__control_left {
-      left: 0;
+      left: 2vw;
+      margin-top: -60px;
+
     }
 
     .slider__control_right {
-      right: 0;
+      left: 80vw;
+      margin-top: -350px;
+
     }
 
     .slider__control::before {
@@ -82,6 +100,7 @@
       display: inline-block;
       width: 20px;
       height: 20px;
+
       background: transparent no-repeat center center;
       background-size: 100% 100%;
     }
@@ -94,8 +113,174 @@
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
     }
 
-    .slider__item>div {
+    .slider__item>img {
       line-height: 250px;
       font-size: 100px;
       text-align: center;
+    }
+
+    .tpl_hamburger{
+      display: none;
+    }
+    .box{
+      background-color: black;
+      border-radius: 115px;
+      width: 85vw;
+      height: 1471px;
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      
+      padding-bottom: 85px;
+
+    }
+    h2{
+      font-family: BoldCondenced;
+      font-size: 40px;
+      color: white;
+    }
+    h1{
+      font-family: BoldCondenced;
+      font-size: 50px;
+      color: white;
+      margin-left: 120px;
+      margin-top: 85px;
+      margin-bottom: 25px;
+      position: relative;
+      z-index: 3;
+    }
+    h3{
+      font-family: BoldCondenced;
+      font-size: 30px;
+      color: white;
+    }
+    h4{
+      font-family: Bold;
+      font-size: 25px;
+      color: white;
+      margin-bottom: 80px;
+      margin-left: 120px;
+      position: relative;
+      z-index: 3;
+    }
+    p{
+      font-family: Regular;
+      font-size: 20px;
+      color: white;
+    }
+    a{
+      text-decoration: none;
+    }
+    .menu a{
+      color: #FFFFFF;
+
+    }
+    .menu a:hover{
+      color: #BD00FF;
+
+    }
+    .footter a{
+      color: #FFFFFF;
+    }
+    .footter a:hover{
+      color: #BD00FF;
+    }
+
+    .menu{
+      width: 100vw;
+      height: 144px;
+      display: flex;
+      justify-content:
+      space-around;
+      position: relative;
+      z-index: 3;
+
+    }
+    .menu h2{
+      margin-top: 20px;
+    }
+
+
+    .footter img{
+      border: none;
+    }
+    .footter{
+      background-color: black;
+
+      width: 100vw;
+      height: 190px;
+      position: relative;
+      z-index: 3;
+      display: flex;
+
+    }
+    .left{
+      margin-top: 60px;
+      display: flex;
+      flex-direction: column;
+    }
+    .right{
+      margin-left: -300px;
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+    }
+    .lineb{
+      display: flex;
+      margin-left: 120px;
+      width: 85vw;
+    }
+    .lineb p{
+      margin-right: 25px;
+      margin-bottom: 25px;
+    }
+    .icons{
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 20px;
+    }
+    .ellipse1{
+      width: 843px;
+      height: 843px;
+      left: -241px;
+      top: -303px;
+      border-radius: 50%;
+      background-color: #0500FF;
+      position: absolute;
+      z-index: 2;
+      animation: flow 7s linear infinite;
+    }
+
+    @keyframes flow {
+
+      0% {
+      transform: translate(0%, 0%);
+      }
+      12.5%{
+      transform: translate(1.5%, 0%);
+      }
+      25% {
+      transform: translate(3%, 0%);
+      }
+      37.5%{
+      transform: translate(3%, 1.5%);
+      }
+      50% {
+      transform: translate(3%, 3%);
+      }
+      62.5%{
+      transform: translate(1.5%, 3%);
+      }
+      75% {
+      transform: translate(0%, 3%);
+      }
+      87.5%{
+      transform: translate(0%, 1.5%);
+      }
+      100% {
+      transform: translate(0%, 0%);
+      }
+
     }
