--- a/pages/5/news/3/styles.css
+++ b/pages/5/news/3/styles.css
@@ -1,15 +1,15 @@
-@import "../../css/reset.css";
+@import "../../../../css/reset.css";
 @font-face {
   font-family: Bold;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Bold.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Bold.ttf);
 }
 @font-face {
   font-family: BoldCondenced;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-BoldCn.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-BoldCn.ttf);
 }
 @font-face {
   font-family: Regular;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
 }
 body{
   background-color: #C40000;
@@ -18,7 +18,7 @@ body{
   align-items: center;
   overflow-x: hidden;
 
-  height: 2339px;
+  height: 1134px;
 }
 .tpl_hamburger{
   display: none;
@@ -88,7 +88,7 @@ a{
   background-color: black;
   border-radius: 115px;
   width: 85vw;
-  height: 2020px;
+  height: 780px;
   position: relative;
   z-index: 3;
   display: flex;
@@ -225,84 +225,66 @@ hr{
 
 
 
+
 .ellipse1{
-  width: 680px;
-  height: 680px;
-  left: 960px;
-  top: -76px;
+  width: 1124px;
+  height: 1124px;
+  left: -731px;
+  top: -497px;
   border-radius: 50%;
-  background-color: #BD00FF;
+  background-color: #FF0000;
   position: absolute;
   z-index: 2;
   animation: flow 7s linear infinite;
 }
 .ellipse2{
-  width: 1124px;
-  height: 1124px;
-  left: -612px;
-  top: 19px;
+  width: 843px;
+  height: 843px;
+  left: 741px;
+  top: -304px;
   border-radius: 50%;
-  background-color: #FF0000;
-  position: absolute;
-  z-index: 2;
-  animation: flow 7s linear infinite;
-}
-.ellipse3{
-  width: 444px;
-  height: 441px;
-  left: 990px;
-  top: 621px;
-  border-radius: 50%;
-  background-color: #FFF735;
+  background-color:  #0500FF;
   position: absolute;
   z-index: 2;
   animation: flow 7s linear infinite;
 }
 .ellipse4{
-  width: 692px;
-  height: 687px;
-  left: 122px;
-  top: 731px;
+  display: none;
+  width: 680px;
+  height: 680px;
+  left: -315px;
+  top: 387px;
   border-radius: 50%;
-  background-color: #0500FF;
+  background-color: #0500FF ;
   position: absolute;
   z-index: 2;
   animation: flow 7s linear infinite;
 }
 .ellipse5{
+  display: none;
   width: 680px;
   height: 680px;
-  left: 1336px;
-  top: 1233px;
-  border-radius: 50%;
-  background-color: #FFF735;
-  position: absolute;
-  z-index: 2;
-  animation: flow 7s linear infinite;
-}
-.ellipse6{
-  width: 844px;
-  height: 844px;
-  left: 855px;
-  top: 1010px;
-
+  left: 1113px;
+  top: 1003px;
   border-radius: 50%;
   background-color: #FF0000;
   position: absolute;
   z-index: 2;
   animation: flow 7s linear infinite;
 }
-.ellipse7{
-  width: 444px;
-  height: 441px;
-  left: -58px;
-  top: 1700px;
+.ellipse6{
+  display: none;
+  width: 680px;
+  height: 626px;
+  left: -373px;
+  top: 1050px;
   border-radius: 50%;
   background-color: #BD00FF;
   position: absolute;
   z-index: 2;
   animation: flow 7s linear infinite;
 }
+
 
 @keyframes flow {
 
@@ -365,7 +347,7 @@ hr{
     width: 560px;
   }
   .box2{
-    height: 1321px;
+    height: 840px;
     width: 705px;
 
   }
@@ -464,50 +446,40 @@ hr{
     height: 27px;
   }
   body{
-    height: 1507px;
+    height: 1026px;
   }
   .ellipse1{
-    width: 380px;
-    height: 380px;
-    left: -95px;
-    top: -91px;
+    width: 400px;
+    height: 400px;
+    left: -65px;
+    top: -113px;
   }
   .ellipse2{
-    width: 524px;
-    height: 524px;
-    left: 188px;
-    top: 172px;
-  }
-  .ellipse3{
-    width: 444px;
-    height: 441px;
-    left: -363px;
-    top: 441px;
+    width: 300px;
+    height: 300px;
+    left: 417px;
+    top: 58px;
   }
   .ellipse4{
-    width: 392px;
-    height: 392px;
-    left: 319px;
-    top: 555px;
+    display: block;
+    width: 400px;
+    height: 400px;
+    left: -221px;
+    top: 227px;
   }
   .ellipse5{
-    width: 180px;
-    height: 180px;
-    left: 530px;
-    top: 1058px;
+    display: block;
+    width: 400px;
+    height: 400px;
+    left: 260px;
+    top: 477px;
   }
   .ellipse6{
-    width: 244px;
-    height: 244px;
-    left: -107px;
-    top: 1010px;
-  }
-  .ellipse7{
-    width: 244px;
-    height: 244px;
-    left: 184px;
-    top: 918px;
-
+    display: block;
+    width: 300px;
+    height: 300px;
+    left: 100px;
+    top: 616px;
   }
 
 
@@ -581,7 +553,7 @@ hr{
   }
 
   body{
-    height: 4073px;
+    height: 914px;
     overflow-x: hidden;
 
   }
@@ -596,7 +568,7 @@ hr{
 
   .box2{
     background-color: rgba(0, 0, 0, 0);
-    height: 3763px;
+    height: 655px;
     width: 100vw;
     margin-left: 0px;
     margin-top: 0px;
@@ -686,34 +658,24 @@ hr{
     display: flex;
   }
   .ellipse1{
-    left: -95px;
-    top: -19px;
+    top: -12px;
   }
   .ellipse2{
-    width: 224px;
-    height: 224px;
-    left: 38px;
-    top: 2104px;
+    left: 72px;
+    top: 156px;
   }
-  .ellipse3{
-    left: -388px;
-  }
+
   .ellipse4{
-    left: -25px;
-    top: 795px;
+    display: none;
   }
   .ellipse5{
-    left: 175px;
-    top: 1267px;
+    left: -85px;
+    top: 427px;
   }
   .ellipse6{
-    top: 1410px;
+    top: 501px;
   }
-  .ellipse7{
-    left: 105px;
-    top: 1718px;
 
-  }
 
 
 }
