--- a/pages/2/week/wed/styles.css
+++ b/pages/2/week/wed/styles.css
@@ -1,15 +1,15 @@
-@import "../../css/reset.css";
+@import "../../../../css/reset.css";
 @font-face {
   font-family: Bold;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Bold.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Bold.ttf);
 }
 @font-face {
   font-family: BoldCondenced;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-BoldCn.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-BoldCn.ttf);
 }
 @font-face {
   font-family: Regular;
-  src: url(../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
+  src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
 }
 body{
   background-color: #4C0067;
