--- a/pages/5/news/4/styles.css
+++ b/pages/5/news/4/styles.css
@@ -12,7 +12,7 @@
   src: url(../../../../fonts/AkzidenzGroteskPro/AkzidenzGroteskPro-Regular.ttf);
 }
 body{
-  background-color: #C40000;
+  background-color: #7C0000;
   display: flex;
   flex-direction: column;
   align-items: center;
